Add slimCRUD rails ex example

--- a/src/rails/slimcrud/Gemfile
+++ b/src/rails/slimcrud/Gemfile
@@ -36,25 +36,6 @@ gem 'jbuilder', '~> 2.5'
 # Reduces boot times through caching; required in config/boot.rb
 gem 'bootsnap', '>= 1.1.0', require: false
 
-# Custom Gem Plugins to make development happier :)
-# ================================================
-
-# Awesome print is for formatting the rails console output more readable.
-# usage ex: ap Book.all, ap prefix is to activate formatting
-gem "awesome_print", require:"ap"
-
-# Meta Request
-# Url: https://github.com/qqshfox/meta_request
-group :development do
-  gem 'meta_request'
-end
-
-# Pry Rails - Command base debugging
-# Url: https://github.com/rweng/pry-rails
-gem 'pry-rails', :group => :development
-
-# EndOf Custom Gem Plugins ==========================
-
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
@@ -80,4 +61,13 @@ end
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
 gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
 
-gem 'bootstrap', '~> 4.0.0'
+# CUSTIMIZE gem start here
+# ========================
+gem "awesome_print", require: "ap"
+group :development do
+  gem 'meta_request'
+end
+gem "pry-rails", :group => :development
+gem "slim-rails"
+
+
