--- a/src/rails/slimbulmacrud/Gemfile
+++ b/src/rails/slimbulmacrud/Gemfile
@@ -70,5 +70,5 @@ group :development do
   gem 'pry-rails'
 end
 gem "slim-rails"
-gem "bootstrap", ">= 4.1.2" # below that have a security issue.
-gem "jquery-rails"
+# gem "bootstrap", ">= 4.1.2" # below that have a security issue.
+gem "bulma-rails", "~> 0.7.4"
